# origami

./: .gitignore  CMakeLists.txt  DECISIONS.md  LICENSE  README.md  portfile.cmake  test.sh  usage  vcpkg.json
modules/Core/src/: game.cpp  game_test.cpp
modules/core/: CMakeLists.txt
modules/core/src/: game.cpp  game.h  game_test.cpp
